--- a/frontend/weather-app/package.json
+++ b/frontend/weather-app/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.4.0",
+    "axios": "^1.11.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "axios": "^1.6.0",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
