--- a/backend/.env
+++ b/backend/.env
@@ -5,5 +5,5 @@ OPENWEATHER_API_KEY=1840e41d9b8df33640aa7b9bd4ddb76d
 
 # Auth0 Configuration
 AUTH0_DOMAIN=dev-weather.us.auth0.com
-# AUTH0_AUDIENCE=https://weather-app-api
+AUTH0_AUDIENCE=https://weather-app-api
 
