--- a/frontend/weather-app/.env
+++ b/frontend/weather-app/.env
@@ -1,2 +1,6 @@
 VITE_AUTH0_DOMAIN=dev-weather.us.auth0.com
 VITE_AUTH0_CLIENT_ID=GeUrVqERtsiyrkeqUwuZIMLQbiMtvaqK
+VITE_AUTH0_AUDIENCE=https://weather-app-api
+
+# API Configuration  
+VITE_API_BASE_URL=http://localhost:5002/api
